<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bahl.bahl.BiometricVerficationActivity">

    <ScrollView
        android:id="@+id/llParentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_purpose" />

            <Spinner
                android:id="@+id/spinnerPurpose"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:dropDownSelector="#202020" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_Customer_Category" />

            <Spinner
                android:id="@+id/spinnerCustomerCategory"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_ident_type" />

            <Spinner
                android:id="@+id/spinneridentityType"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_ident_no" />

            <EditText
                android:id="@+id/txtIdentityNo"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_contact_type" />

            <Spinner
                android:id="@+id/spinnerContactType"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_contact_no" />

            <EditText
                android:id="@+id/txtContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prompt_Location" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/prompt_product_category" />

            <Spinner
                android:id="@+id/spinnerProductCategory"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/ivThumbImpression"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:adjustViewBounds="false"
                android:background="#ffffffff"
                android:contentDescription="@string/prompt_thumb_impression"
                android:src="@drawable/thumb_impression_default" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:background="@drawable/button_press"
                android:padding="25dp"
                android:text="@string/action_save"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
