<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivImageViewerr"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="false"
            android:background="#ffffffff" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">





            <!--<Button-->
                <!--android:id="@+id/btnGetImagee"-->
                <!--android:layout_width="250dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_below="@+id/btnCloseDevice"-->
                <!--android:text="GetImage"-->
                <!--android:textSize="15sp" />-->

            <!--<Button-->
                <!--android:id="@+id/btnGetImageQuality"-->
                <!--android:layout_width="250dp"-->
                <!--android:layout_height="50dp"-->
                 <!-- -->
                <!--android:text="GetImageQuality"-->
                <!--android:textSize="15sp" />-->
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
         >

        <TextView
            android:id="@+id/tvTemp1"
            android:layout_width="544dp"
            android:layout_height="118dp"
            android:background="#ffdddddd"
            android:singleLine="false"
            android:text="Template1"
            android:textColor="#443"
            android:visibility="gone"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<Button-->
                <!--android:id="@+id/btnCreateANSITemp"-->
                <!--android:layout_width="250dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:text="CreateANSITemplate"-->
                <!--android:textSize="15sp"-->
                <!--android:visibility="gone"/>-->

            <!--<Button-->
                <!--android:id="@+id/btnCreateISOTemp"-->
                <!--android:layout_width="250dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_below="@+id/btnCreateANSITemp"-->
                <!--android:text="CreateISOTemplate"-->
                <!--android:textSize="15sp"-->
                <!--android:visibility="gone"/>-->
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvTemp2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="#ffdddddd"
            android:singleLine="false"
            android:text="Template2"
            android:textColor="#443" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMatchTemp"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="MatchTemplate"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/llParentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_purpose" />

                <Spinner
                    android:id="@+id/spinnerPurpose"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:dropDownSelector="#202020" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_Customer_Category" />

                <Spinner
                    android:id="@+id/spinnerCustomerCategory"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_ident_type" />

                <Spinner
                    android:id="@+id/spinneridentityType"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_ident_no" />

                <EditText
                    android:id="@+id/txtIdentityNo"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_contact_type" />

                <Spinner
                    android:id="@+id/spinnerContactType"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_contact_no" />

                <EditText
                    android:id="@+id/txtContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

               <!-- <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/prompt_Location" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />-->

                <TextView
                    android:id="@+id/productCategoryTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/prompt_product_category" />

                <Spinner
                    android:id="@+id/spinnerProductCategory"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/fingerIndexTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/prompt_finger_index" />

                <Spinner
                    android:id="@+id/spinnerFingerIndex"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp" />

                <!-- <ImageView
                     android:id="@+id/ivThumbImpression"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_marginTop="4dp"
                     android:adjustViewBounds="false"
                     android:background="#ffffffff"
                      />-->






                    <!--<ImageView
                        android:id="@+id/ivThumbImpression"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="4dp"
                        android:adjustViewBounds="false"
                        android:background="#ffffffff" />-->

                    <ImageView
                        android:id="@+id/ivImageViewer"
                        android:layout_width="200dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="25dp"
                        android:padding="10dp"
                        android:adjustViewBounds="false"
                        android:background="@drawable/biometric"
                        android:layout_gravity="center_horizontal"
                        />

                    <!--<Button-->
                        <!--android:id="@+id/btnOpenDevice"-->
                        <!--android:layout_width="200dp"-->
                        <!--android:layout_height="50dp"-->
                        <!--android:layout_marginLeft="44dp"-->
                        <!--android:layout_toRightOf="@+id/ivImageViewer"-->
                        <!--android:text="Open"-->
                        <!--android:textSize="15sp"-->
                         <!--/>-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btnOpenDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivImageViewer"
                    android:text="Open"
                    android:textSize="15sp"
                    android:ems="5"
                    android:layout_weight="0.5"
                     />

                <Button
                    android:id="@+id/btnCloseDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/ivImageViewer"
                    android:text="Close"
                    android:textSize="15sp"
                    android:ems="5"
                    android:layout_weight="0.5"
                     />

</LinearLayout>

                <Button
                    android:id="@+id/btnGetImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Get Image"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:padding="25dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/green_button"
                    android:textSize="15sp" />

                    <!--<Button-->
                        <!--android:id="@+id/btnCloseDevice"-->
                        <!--android:layout_width="220dp"-->
                        <!--android:layout_height="50dp"-->
                        <!--android:layout_below="@id/btnVerifyThumb"-->

                        <!--android:layout_marginLeft="44dp"-->
                        <!--android:layout_toRightOf="@+id/ivImageViewer"-->
                        <!--android:text="Close"-->
                        <!--android:textSize="15sp"-->
                        <!--android:visibility="gone"/>-->



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNadraMessage"
                    android:background="@drawable/notification_message"
                    android:textColor="@color/colorBrown"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:layout_marginTop="25dp"
                    />

                <!--<Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_press"
                android:padding="25dp"
                android:text="@string/action_save"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <!--<ImageView
                        android:id="@+id/ivImageViewer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_weight="0.5"
                        android:adjustViewBounds="false"
                        android:background="@drawable/biometric"
                        />

                    <Button
                        android:id="@+id/btnGetImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnOpenDevice"
                        android:text="Get Image"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:padding="25dp"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/green_button"
                        android:textSize="15sp" />-->

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:layout_weight="0.5"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_press"
                        android:padding="25dp"
                        android:text="@string/action_save"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_press"
                        android:padding="25dp"
                        android:text="@string/action_reset"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</LinearLayout>

